tests/NormalTests/paczka1/small_fuzzy/11198152.err
Error in line 3: 1rkk3 A606 15,6
Error in line 6: f16vkKoipP5 A764 88,0
Error in line 9: f16vkKoipP5 A606 56,1
Error in line 5: 1rkk3 A196 91,9
Error in line 12: 1rkk3 A606 63,7
Error in line 11: A196 A606 61,5
